# GarminConnectMCP

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN-oura-integration.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  test_mcp_oauth.py
.claude/commands/: release-tools.md
.github/workflows/: ci.yml  docker.yml
docs/: architecture-review.md  claude_desktop_setup.md  oauth-approval-gate-plan.md
fallback/: sync_to_drive.py
src/garmin_mcp/: __init__.py  __main__.py  config.py  credentials.py  garmin_client.py  server.py
src/garmin_mcp/fallback/: sync_to_drive.py
src/garmin_mcp/tools/: activities.py  body.py  health.py  training.py  workouts.py
src/garmin_mcp/web/: __init__.py  app.py  config_store.py
src/garmin_mcp/web/static/: style.css
src/garmin_mcp/web/templates/: index.html
tests/: test_activities.py  test_bearer_auth.py  test_body.py  test_config.py  test_credentials.py  test_debug_redaction.py  test_garmin_client.py  test_health.py  test_mcp_integration.py  test_oauth_persistence.py  test_server_startup.py  test_server_unconfigured.py  test_setup_screen.py  test_totp_gate.py  test_training.py  test_workouts.py
