[project]
name = "garmin-mcp"
version = "0.1.0"
description = "MCP server exposing Garmin Connect data for Hyrox training analysis"
requires-python = ">=3.11"
dependencies = [
    "garminconnect>=0.2.25",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.134.0",
    "jinja2>=3.1.6",
    "uvicorn[standard]>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/garmin_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
