[project]
name = "garmin-mcp"
version = "0.2.0"
description = "MCP server exposing Garmin Connect data for training analysis"
requires-python = ">=3.11"
dependencies = [
    "garminconnect>=0.2.25",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pyotp>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "bandit[toml]>=1.7.0",
    "pip-audit>=2.7.0",
]

[project.scripts]
garmin-mcp = "garmin_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/garmin_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"src/garmin_mcp/server.py" = ["E402"]

[tool.bandit]
exclude_dirs = ["tests"]
